--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# documentation
+/docs
 
 # dependencies
 /node_modules
