--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio"
@@ -29,7 +32,9 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-next": "^15.1.0",
+    "prettier": "^3.3.3",
     "prisma": "^5.19.1",
     "tailwindcss": "^4",
     "typescript": "^5.7.0"
